--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1039,6 +1039,13 @@ video {
   position: sticky;
 }
 
+.inset-0{
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
+
 .inset-y-0{
   top: 0px;
   bottom: 0px;
@@ -1104,6 +1111,18 @@ video {
   z-index: 10;
 }
 
+.z-50{
+  z-index: 50;
+}
+
+.z-40{
+  z-index: 40;
+}
+
+.float-right{
+  float: right;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -1137,6 +1156,11 @@ video {
 .my-1{
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
+}
+
+.my-6{
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .mb-2{
@@ -1217,6 +1241,14 @@ video {
 
 .ml-10{
   margin-left: 2.5rem;
+}
+
+.mr-1{
+  margin-right: 0.25rem;
+}
+
+.ml-auto{
+  margin-left: auto;
 }
 
 .block{
@@ -1371,6 +1403,10 @@ video {
   width: 40px;
 }
 
+.w-auto{
+  width: auto;
+}
+
 .max-w-lg{
   max-width: 32rem;
 }
@@ -1425,6 +1461,14 @@ video {
 
 .max-w-\[250px\]{
   max-width: 250px;
+}
+
+.max-w-3xl{
+  max-width: 48rem;
+}
+
+.flex-auto{
+  flex: 1 1 auto;
 }
 
 .cursor-pointer{
@@ -1483,6 +1527,10 @@ video {
   align-items: center;
 }
 
+.justify-end{
+  justify-content: flex-end;
+}
+
 .justify-center{
   justify-content: center;
 }
@@ -1527,6 +1575,14 @@ video {
   overflow: hidden;
 }
 
+.overflow-y-auto{
+  overflow-y: auto;
+}
+
+.overflow-x-hidden{
+  overflow-x: hidden;
+}
+
 .whitespace-nowrap{
   white-space: nowrap;
 }
@@ -1557,6 +1613,16 @@ video {
   border-bottom-left-radius: 0px;
 }
 
+.rounded-t{
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+
+.rounded-b{
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
 .border{
   border-width: 1px;
 }
@@ -1565,8 +1631,24 @@ video {
   border-width: 2px;
 }
 
+.border-0{
+  border-width: 0px;
+}
+
 .border-b-2{
   border-bottom-width: 2px;
+}
+
+.border-b{
+  border-bottom-width: 1px;
+}
+
+.border-t{
+  border-top-width: 1px;
+}
+
+.border-solid{
+  border-style: solid;
 }
 
 .border-red{
@@ -1724,6 +1806,21 @@ video {
   background-color: rgb(187 247 208 / var(--tw-bg-opacity));
 }
 
+.bg-pink-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 72 153 / var(--tw-bg-opacity));
+}
+
+.bg-emerald-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
+}
+
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
@@ -1751,6 +1848,10 @@ video {
 
 .p-4{
   padding: 1rem;
+}
+
+.p-6{
+  padding: 1.5rem;
 }
 
 .py-2{
@@ -1971,6 +2072,10 @@ video {
   line-height: 1.375;
 }
 
+.leading-relaxed{
+  line-height: 1.625;
+}
+
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -2036,6 +2141,11 @@ video {
   color: rgb(203 213 225 / var(--tw-text-opacity));
 }
 
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .underline{
   text-decoration-line: underline;
 }
@@ -2084,6 +2194,14 @@ video {
   opacity: 0;
 }
 
+.opacity-5{
+  opacity: 0.05;
+}
+
+.opacity-25{
+  opacity: 0.25;
+}
+
 .shadow{
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -2112,6 +2230,11 @@ video {
   --tw-shadow: 0 0 #0000 !important;
   --tw-shadow-colored: 0 0 #0000 !important;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+}
+
+.outline-none{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .filter{
@@ -2144,6 +2267,14 @@ video {
 
 .duration-300{
   transition-duration: 300ms;
+}
+
+.duration-150{
+  transition-duration: 150ms;
+}
+
+.ease-linear{
+  transition-timing-function: linear;
 }
 
 .invalid\:border-pink-500:invalid{
@@ -2226,6 +2357,16 @@ video {
 .focus\:ring-gray-200:focus{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
+}
+
+.active\:bg-pink-600:active{
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 39 119 / var(--tw-bg-opacity));
+}
+
+.active\:bg-emerald-600:active{
+  --tw-bg-opacity: 1;
+  background-color: rgb(5 150 105 / var(--tw-bg-opacity));
 }
 
 .active\:shadow-none:active{
