--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -1,49 +1,57 @@
-html, body {
+html,
+body {
+  background-color: #f4f4ff;
+  background-repeat: no-repeat;
 
-    background-color: #F4F4FF;
-    background-repeat: no-repeat;
-
-    color: #555;
+  color: #555;
 }
 .bg {
-    background: linear-gradient(180deg, #C1DBFF 0%, rgba(217, 217, 217, 0) 73.44%);
-    height: 60vh;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    opacity: 0.5;
-    z-index: 0;
+  background: linear-gradient(
+    180deg,
+    #c1dbff 0%,
+    rgba(217, 217, 217, 0) 73.44%
+  );
+  height: 60vh;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 0.5;
+  z-index: 0;
 }
 .add-sidebar {
-    background-color: rgba(62, 75, 95, 0.04);
+  background-color: rgba(62, 75, 95, 0.04);
 }
 
-$darkBlue: #3E4B5F;
+$darkBlue: #3e4b5f;
 a {
-    color: $darkBlue;
-    font-weight: bold;
-    text-decoration: underline;
-    &:hover {
-        text-decoration: none;
-    }
+  color: $darkBlue;
+  font-weight: bold;
+  text-decoration: underline;
+  &:hover {
+    text-decoration: none;
+  }
 }
-h1, h2, h3, h4, h5, h6 {
-    color: $darkBlue;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: $darkBlue;
 }
 
 h1 {
-  @apply text-5xl mb-4 font-bold font-serif
-
+  @apply text-5xl mb-4 font-bold font-serif;
 }
 h2 {
-    @apply text-2xl mb-3 font-bold
-
+  @apply text-2xl mb-3 font-bold  font-serif;
 }
 
 h3 {
-    @apply text-xl mb-2
+  @apply text-xl mb-2;
 }
 
-p, li {
-    color: #444;
+p,
+li {
+  color: #444;
 }
